# adventofcode-cpp

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  CI.py  CMakeLists.txt  CMakePresets.json  ConanInstall.bat  LICENSE  README.md  compile_commands.json  conan-install.py  conan-install.sh  conanfile.py  conanfile.txt  day-interface.in.hpp  dev-local-ci.py  hello.cxx  input.in.hpp  main.cxx  mise.toml  package-lock.json  package.json  problem.cxx  pyproject.toml  reconfigure-build-dir.py  taskfile.dist.yaml  taskfile.yaml  vcpkg-configuration.json  vcpkg.json  verify-results.py
.devcontainer/: CMakeUserPresets.json  Dockerfile  conan-global.conf  devcontainer.json  on-create.sh  onCreate.sh  post-attach.sh  postStart.sh  taskfile.yaml  updateContent.sh
.devcontainer/conan-profiles/: dev-clang  dev-clang-17  dev-clang-18  dev-gcc  dev-gcc-12  dev-gcc-13  ubuntu  ubuntu-clang  ubuntu-clang-debug  ubuntu-clang-release  ubuntu-gcc-14  ubuntu-gcc-14-debug  ubuntu-gcc-14-release
.devcontainer/features/conan-persistent-package-cache/: devcontainer-feature.json  install.sh  onCreate.sh
.devcontainer/features/poetry-persistent-cache/: devcontainer-feature.json  install.sh  onCreate.sh
.github/: CMakeUserPresets.json  dependabot.yml  renovate.json5
.github/actions/cmake-project-setup/: action.yaml
.github/actions/npm-tools-setup/: action.yaml
.github/actions/yarn-project-setup/: action.yaml
.github/conan-profiles/: clang-windows  msvc  msvc-debug  msvc-release  ubuntu-clang  ubuntu-clang-debug  ubuntu-clang-release  ubuntu-gcc-14  ubuntu-gcc-14-debug  ubuntu-gcc-14-release
.github/workflows/: build-test-run.yaml  check-clang-format.yaml  check-clang-tidy.yaml  check-devcontainer.yaml  check-enforce-all-checks.yaml  check-github-actions.yaml  check-npm.yaml  check-prettier.yaml  check-renovate-config.yaml  check-shellcheck.yaml  check-yarn.yaml  ci-cd.yaml  ci.yaml  ci.yml  devcontainer-build-check.yaml  devcontainer.yaml  windows.yml
2022/: CMakeLists.txt
2022/day1/: 2022-day1.cpp  2022-day1.cxx  CMakeLists.txt
2022/day2/: 2022-day2.cpp  CMakeLists.txt  d2-common.hpp  d2p2.cpp
2022/day3/: 2022-day3.cpp  CMakeLists.txt  d3p2.cpp
2022/day4/: 2022-day4.cpp  CMakeLists.txt
2022/day5/: 2022-day5.cpp  CMakeLists.txt
2022/day6/: 2022-day6.cpp  CMakeLists.txt
2022/day7/: 2022-day7.cpp  CMakeLists.txt
aoc/: CMakeLists.txt  day-interface.in.hpp  input.in.hpp
aoc/aoc/: CMakeLists.txt  aoc-config.in.hpp  main.cpp  solution-includes.hpp
aoc/day/: CMakeLists.txt  day-interface.hpp
aoc/result-type/: CMakeLists.txt  result-type.hpp
aoc/test-tools/: CMakeLists.txt  example-input.hpp  test.cpp  test.hpp
aoc/tools/: CMakeLists.txt  convert.hpp  log.hpp  named-type.hpp
aoc/y2022/: CMakeLists.txt  d1.cpp  d1.test.cpp  d2.cpp  d2.test.cpp  d3.cpp  d3.test.cpp  d4.cpp  d4.test.cpp  d5.cpp  d5.test.cpp  d6.cpp  d6.test.cpp  problem.hpp
common/: CMakeLists.txt  common.hpp  convert.hpp  file-reader.cpp  file-reader.hpp  log.hpp  named-type.hpp  program.cpp  program.hpp  runtime-tools.hpp  test.hpp  utils.cpp  utils.hpp
common/test/: CMakeLists.txt  test-main.cpp  test-utils.cpp
day1/: CMakeLists.txt  d1-common.hpp  d1p1.cpp  d1p2.cpp  day1.cpp
day1/common/: CMakeLists.txt  day1-common.cpp  day1-common.hpp
day2/: CMakeLists.txt  d2-common.hpp  d2p1.cpp  d2p2.cpp
day2/common/: CMakeLists.txt  day2-common.cpp  day2-common.hpp
day3/: CMakeLists.txt  d3-common.hpp  d3p1.cpp  d3p2.cpp
day3/common/: CMakeLists.txt  day3-common.cpp  day3-common.hpp
day4/: CMakeLists.txt  d4-common.hpp  d4p1.cpp  d4p2.cpp
day4/common/: CMakeLists.txt  day4-common.cpp  day4-common.hpp
day5/: CMakeLists.txt  d5p1.cpp
